Opened 16 years ago

Closed 16 years ago

#2914 closed bug (fixed)

Regression: B_FLOATING_ALL_WINDOW_FEEL or B_FLOATING_SUBSET_WINDOW_FEEL broken

Reported by: tqh Owned by: axeld
Priority: high Milestone: R1/alpha1
Component: Kits/Interface Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When selecting Customize in Firefox a always on top window appears over the html-page with widgets. If selecting the main window the customize window disappears.

Easiest way to open customize is right-click the area under the address-bar and choosing 'Customize'. As I'm running custom Firefox-builds please confirm, although I havn't done any changes that should affect that.

hrev28295 gcc4 build.

Change History (5)

comment:1 by tqh, 16 years ago

Summary: B_ALWAYS_ON_TOP brokenB_FLOATING_ALL_WINDOW_FEEL or B_FLOATING_SUBSET_WINDOW_FEEL broken

Updating bug-title to be more correct. Code for modality in Firefox: http://mxr.mozilla.org/mozilla1.8/source/widget/src/beos/nsWindow.cpp#645

comment:2 by tqh, 16 years ago

Works in hrev28280, but not in hrev28281.

comment:3 by julun, 16 years ago

Milestone: R1R1/alpha1
Priority: normalhigh
Summary: B_FLOATING_ALL_WINDOW_FEEL or B_FLOATING_SUBSET_WINDOW_FEEL brokenRegression: B_FLOATING_ALL_WINDOW_FEEL or B_FLOATING_SUBSET_WINDOW_FEEL broken

This bug was introduced in hrev28281 as pointed out by tqh. It's easy to reproduce if you open the MediaPlayer settings window and afterwards Magnify. The settings window disapears completely and one can't get it back until MediaPlayer restart.

comment:4 by axeld, 16 years ago

Status: newassigned

comment:5 by axeld, 16 years ago

Resolution: fixed
Status: assignedclosed

There is also a demo application "LookAndFeel" which can be used to test all of these things. Anyway, thanks for the hints! It's fixed in hrev28309.

Note: See TracTickets for help on using tickets.