* r28281 accidently added the B_NORMAL_WINDOW_FEEL (0) to the list of special   feels. This caused floating/modal app and subset windows to not work anymore. * This fixes bug #2914.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28309 a95241bf-73f2-0310-859d-f6bbb57e9c96